--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -15,6 +15,10 @@ libfuzzer-sys = "0.4"
 path = "../crates/polkavm"
 features = ["export-internals-for-testing"]
 
+[dependencies.polkavm-common]
+path = "../crates/polkavm-common"
+features = ["export-internals-for-testing"]
+
 [[bin]]
 name = "fuzz_shm_allocator"
 path = "fuzz_targets/fuzz_shm_allocator.rs"
