--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,111 +1,109 @@
 name: Rust
 
 on:
-    push:
-        branches: [ "master" ]
-    pull_request:
-        branches: [ "master" ]
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 env:
-    CARGO_TERM_COLOR: always
+  CARGO_TERM_COLOR: always
 
 jobs:
-    build-and-test-linux:
-        runs-on: ubuntu-22.04
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Enable unprivileged userfaultfd
-                run: echo "1" | sudo tee /proc/sys/vm/unprivileged_userfaultfd
-            -   name: Install LLD
-                run: sudo apt-get install -y lld
-            -   name: Install target -- i686-unknown-linux-musl
-                run: rustup target add i686-unknown-linux-musl
-            -   name: Install target -- x86_64-unknown-freebsd
-                run: rustup target add x86_64-unknown-freebsd
-            -   name: Build and test (generic)
-                run: ./ci/jobs/build-and-test.sh
-            -   name: Build and test (Linux-only)
-                run: ./ci/jobs/build-and-test-linux.sh
-            -   name: Check (FreeBSD)
-                run: ./ci/jobs/check-freebsd.sh
-    build-and-test-macos:
-        runs-on: macos-latest
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Build and test
-                run: ./ci/jobs/build-and-test.sh
-            -   name: Build and test (macOS-only)
-                run: ./ci/jobs/build-and-test-macos.sh
-    build-and-test-windows:
-        runs-on: windows-latest
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Build and test
-                shell: bash
-                run: ./ci/jobs/build-and-test.sh
-    build-guests:
-        runs-on: ubuntu-22.04
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Install LLD
-                run: sudo apt-get install -y lld
-            -   name: Build guests
-                run: ./ci/jobs/build-guests.sh
-    kani:
-        runs-on: ubuntu-22.04
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Install kani
-                run: cargo install --locked --version 0.55.0 kani-verifier
-            -   name: Setup kani
-                run: cargo kani setup
-            -   name: Run kani
-                run: ./ci/jobs/kani.sh
-    clippy:
-        runs-on: ubuntu-22.04
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Install clippy (base toolchain)
-                run: rustup component add clippy
-            -   name: Install clippy (zygote toolchain)
-                run: cd crates/polkavm-zygote && rustup component add clippy
-            -   name: Run clippy
-                run: ./ci/jobs/clippy.sh
-    rustfmt:
-        runs-on: ubuntu-22.04
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Install rustfmt (base toolchain)
-                run: rustup component add rustfmt
-            -   name: Install rustfmt (zygote toolchain)
-                run: cd crates/polkavm-zygote && rustup component add rustfmt
-            -   name: Run rustfmt
-                run: ./ci/jobs/rustfmt.sh
-    pallet-revive-tests:
-        runs-on: ubuntu-22.04
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Enable unprivileged userfaultfd
-                run: echo "1" | sudo tee /proc/sys/vm/unprivileged_userfaultfd
-            -   name: Install LLD
-                run: sudo apt-get install -y lld
-            -   name: Build and test
-                run: ./ci/jobs/build-and-test-pallet-revive.sh
-    link-westend-runtime-blob:
-        runs-on: ubuntu-22.04
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Build and test
-                run: ./ci/jobs/link-westend-runtime-blob.sh
-    fuzz:
-        runs-on: ubuntu-22.04
-        steps:
-            -   uses: actions/checkout@v4
-            -   name: Install cargo fuzz
-                run: |
-                    rustup toolchain install $TOOLCHAIN
-                    rustup run $TOOLCHAIN cargo install cargo-fuzz
-                env:
-                    TOOLCHAIN: 1.83.0
-            -   name: Fuzz
-                run: ./ci/jobs/fuzz.sh
+  build-and-test-linux:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Enable unprivileged userfaultfd
+        run: echo "1" | sudo tee /proc/sys/vm/unprivileged_userfaultfd
+      - name: Install LLD
+        run: sudo apt-get install -y lld
+      - name: Install target -- i686-unknown-linux-musl
+        run: rustup target add i686-unknown-linux-musl
+      - name: Install target -- x86_64-unknown-freebsd
+        run: rustup target add x86_64-unknown-freebsd
+      - name: Build and test (generic)
+        run: ./ci/jobs/build-and-test.sh
+      - name: Build and test (Linux-only)
+        run: ./ci/jobs/build-and-test-linux.sh
+      - name: Check (FreeBSD)
+        run: ./ci/jobs/check-freebsd.sh
+  build-and-test-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build and test
+        run: ./ci/jobs/build-and-test.sh
+      - name: Build and test (macOS-only)
+        run: ./ci/jobs/build-and-test-macos.sh
+  build-and-test-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build and test
+        shell: bash
+        run: ./ci/jobs/build-and-test.sh
+  build-guests:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install LLD
+        run: sudo apt-get install -y lld
+      - name: Build guests
+        run: ./ci/jobs/build-guests.sh
+  kani:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install kani
+        run: cargo install --locked --version 0.55.0 kani-verifier
+      - name: Setup kani
+        run: cargo kani setup
+      - name: Run kani
+        run: ./ci/jobs/kani.sh
+  clippy:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install clippy (base toolchain)
+        run: rustup component add clippy
+      - name: Install clippy (zygote toolchain)
+        run: cd crates/polkavm-zygote && rustup component add clippy
+      - name: Run clippy
+        run: ./ci/jobs/clippy.sh
+  rustfmt:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install rustfmt (base toolchain)
+        run: rustup component add rustfmt
+      - name: Install rustfmt (zygote toolchain)
+        run: cd crates/polkavm-zygote && rustup component add rustfmt
+      - name: Run rustfmt
+        run: ./ci/jobs/rustfmt.sh
+  pallet-revive-tests:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Enable unprivileged userfaultfd
+        run: echo "1" | sudo tee /proc/sys/vm/unprivileged_userfaultfd
+      - name: Install LLD
+        run: sudo apt-get install -y lld
+      - name: Build and test
+        run: ./ci/jobs/build-and-test-pallet-revive.sh
+  link-westend-runtime-blob:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build and test
+        run: ./ci/jobs/link-westend-runtime-blob.sh
+  fuzz:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install cargo fuzz
+        run: |
+          rustup toolchain install 1.83.0
+          rustup run 1.83.0 cargo install cargo-fuzz
+      - name: Fuzz
+        run: ./ci/jobs/fuzz.sh
