--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Install clippy (base toolchain)
       run: rustup component add clippy
     - name: Run clippy
-      run: ./ci/jobs/clippy-macos.sh
+      run: ./ci/jobs/clippy.sh
   build-and-test-windows:
     runs-on: windows-latest
     steps:
