--- a/examples/quake/Cargo.toml
+++ b/examples/quake/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 env_logger = { workspace = true }
 log.workspace = true
+polkakernel = { git = "https://github.com/paritytech/polkaports", rev = "56e103cdbef318f075c18bd79442257cfb63a18c", features = ["std"] }
 polkavm = { path = "../../crates/polkavm" }
 sdl2 = { workspace = true }
 
