Manually allocate memory for the heap and stack, and add a rust-toolchain for each service

--- a/services/revm_test/Cargo.toml
+++ b/services/revm_test/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["staticlib", "rlib"]
 
 [dependencies]
 polkavm-derive = { path = "../../crates/polkavm-derive" }
+simplealloc = { path = "../../crates/simplealloc" }
 utils = { path = "../utils" }
 
 bytes = { version = "1", default-features = false }
