--- a/services/revm_test/Cargo.toml
+++ b/services/revm_test/Cargo.toml
@@ -14,14 +14,10 @@ crate-type = ["staticlib", "rlib"]
 [dependencies]
 polkavm-derive = { path = "../../crates/polkavm-derive" }
 simplealloc = { path = "../../crates/simplealloc" }
+# picoalloc = { version = "1", features = ["global_allocator_rust"], default-features = false }
 utils = { path = "../utils" }
-
 bytes = { version = "1", default-features = false }
 
 # revm
 revm = { version = "22.0.1", default-features = false }
 revm-database = { version = "3.0.0", default-features = false }
-# serde = { version = "1.0", default-features = false, features = ["derive"] }
-# example-my-evm = { git = "https://github.com/bluealloy/revm", default-features = false}
-
-# bincode = { version = "1.3.3", default-features = false}
