--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     "examples/doom",
     "examples/quake",
     "examples/hello-world",
+    "examples/transfer",
 ]
 
 [workspace.package]
