--- a/crates/polkavm-linker/riscv32emac-unknown-none-polkavm.json
+++ b/crates/polkavm-linker/riscv32emac-unknown-none-polkavm.json
@@ -13,7 +13,7 @@
   "max-atomic-width": 64,
   "panic-strategy": "abort",
   "relocation-model": "pie",
-  "target-pointer-width": "32",
+  "target-pointer-width": 32,
   "singlethread": true,
   "pre-link-args": {
     "ld": [
